style.css
html {
  box-sizing: border-box;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

body {
  background-color: #e2e6ea;
  color: #333;
  line-height: 1.6;
  display: grid;
  grid-template-columns: 1fr 4.5fr;
}

.sidebar {
  background-color: #32689f;
  color: white;
  padding: 20px;
  grid-row: 1/3;
  display: grid;
  grid-template-rows: auto auto 1fr;
  gap: 30px;
}

.sidebar ul {
  list-style: none;
}

.sidebar a {
  color: white;
  text-decoration: none;
  display: grid;
  grid-template-columns: 30px auto;
  align-items: center;
  padding: 10px 0;
  font-weight: bold;
}

header {
  background-color: white;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
  padding: 20px 40px;
  display: grid;
  grid-template-rows: auto auto;
  grid-template-columns: 3fr 1fr;
  gap: 10px;
}

header div {
  display: flex;
  align-items: center;
  gap: 10px;
}

header button {
  background-color: #32689f;
  border: none;
  border-radius: 20px;
  color: white;
  padding: 8px 30px;
  font-size: 12px;
  cursor: pointer;
}

.search > input {
  background-color: #e2e6ea;
  border: none;
  border-radius: 20px;
  padding: 6px 8px;
  width: 80%;
}

.notifications {
  justify-self: end;
  padding-right: 10px;
  gap: 20px;
}

.notifications p {
  font-size: 14px;
  font-weight: bold;
}

.notifications img {
  cursor: pointer;
}

.greeting {
  display: grid;
  grid-template-columns: 100px auto;
}

.greeting div {
  display: grid;
  gap: 2px;
}

.greeting h2 {
  font-size: 20px;
  font-weight: bold;
  align-self: flex-start;
}

.greeting p {
  font-size: 14px;
  font-weight: bold;
  align-self: flex-end;
}

.buttons {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 30px;
}

.main-content {
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 0.5fr auto;
  gap: 20px;
  padding: 20px;
}

.main-content > :first-child {
  grid-row: 1/3;
}

h3 {
  margin-bottom: 10px;
}

.projects {
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: 0.1fr 1fr 1fr 1fr;
  gap: 20px;
}

svg {
  width: 17px;
  height: auto;
  cursor: pointer;
}

.card {
  padding: 20px 30px;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  background: linear-gradient(to right, rgb(123, 6, 107) 2%, transparent 2%);
  background-color: white;
}

.announcements {
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  background-color: white;
  padding: 30px;
  display: grid;
  grid-template-rows: auto auto auto;
  gap: 15px;
}

.announcements > div {
  border-bottom: 1px solid #e2e6ea;
  padding-bottom: 15px;
}

.announcements > div:last-child {
  border-bottom: none;
  padding-bottom: 0px;
}

.announcements h5 {
  font-size: 15px;
  font-weight: bold;
  margin-bottom: 5px;
}

.announcements p {
  font-size: 14px;
  color: #605f5f;
}

.trending {
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  background-color: white;
  padding: 20px;
  display: grid;
  grid-template-rows: auto auto auto auto;
  gap: 15px;
}

.trending > div {
  display: grid;
  grid-template-columns: 50px auto;
  align-items: center;
  gap: 15px;
}

.trending p {
  font-size: 14px;
  color: #605f5f;
}

.trending img {
  width: 50px;
  height: auto;
  border-radius: 50%;
}

